# tool-telegram-whatsapp

./: .claude-output.txt  .gitignore  AGENT_BRIEF.md  CLAUDE.md  README.md  SPRINT_BRIEF.md  Sprint-Notes.md  cli.py  pyproject.toml
.sprint/: config.sh
.sprint/config/: phases.md
.sprint/history/: sprint-1-brief.md  sprint-4-brief.md  sprint-5-brief.md
.sprint/scripts/: CLAUDE_RUN_PROMPT.txt  check-upstream.sh  sprint-init.sh  sprint-merge.sh  sprint-parse.sh  sprint-plan.sh  sprint-run.sh
docs/: PROJECT_STATUS_2026-03-19-sprint1.md  PROJECT_STATUS_2026-03-19-sprint2.md  PROJECT_STATUS_2026-03-19-sprint3.md  PROJECT_STATUS_2026-03-19-sprint4.md
docs/lifecycle/: PLAN.md  ROADMAP-2026-03-18.md  VISION.md
docs/project-memory/backlog/: README.md
docs/project-memory/sessions/: S-2026-03-19-0313-transport-config.md  S-2026-03-19-0314-sprint1-core-messages.md  S-2026-03-19-0316-sprint1-cli-mcp-skill.md  S-2026-03-19-0406-gitignore-cleanup.md  S-2026-03-19-0407-sprint2-rest-server.md  S-2026-03-19-0408-sprint2-events-history.md  S-2026-03-19-0433-console-transport-init.md  (+6 more)
docs/seed/: afterburner-integration-points.md  architecture-multi-interface-tool.md  design-plan.md  research-telegram-bot-api.md  research-whatsapp-apis.md
skills/: whatsup.md
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_history.py  test_messages.py  test_server.py
whatsup/: __init__.py  __main__.py  config.py  config_ui.html  core.py  history.py  mcp_server.py  messages.py  server.py
whatsup/transport/: __init__.py  console.py  telegram.py
(+1 files in other folders)
