[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "whatsup"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "mcp",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
whatsup = "cli:main"
