[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsup"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
]

[project.optional-dependencies]
mcp = ["mcp"]
dev = ["pytest>=7.0"]

[tool.setuptools]
py-modules = ["cli"]
packages = ["whatsup", "whatsup.transport"]

[project.scripts]
whatsup = "cli:main"
